src/OpenCvSharpExtern/imgproc.h

CVAPI(ExceptionStatus) imgproc_arrowedLine(
    const interop::InputOutputArrayProxy* img,
    interop::Point pt1,
    interop::Point pt2,
    interop::Scalar color,
    int thickness,
    int line_type,
    int shift,
    double tipLength)
{
    return cvTry([&] {
        cv::arrowedLine(IoProxy(*img), cpp(pt1), cpp(pt2), cpp(color), thickness, line_type, shift, tipLength);
    });
}
CVAPI(ExceptionStatus) imgproc_circle(
    const interop::InputOutputArrayProxy* img,
    interop::Point center,
    int radius,
    interop::Scalar color,
    int thickness,
    int lineType,
    int shift)
{
    return cvTry([&] {
        cv::circle(IoProxy(*img), cpp(center), radius, cpp(color), thickness, lineType, shift);
    });
}
CVAPI(ExceptionStatus) imgproc_ellipse1(
    const interop::InputOutputArrayProxy* img,
    interop::Point center,
    interop::Size axes,
    double angle,
    double startAngle,
    double endAngle,
    interop::Scalar color,
    int thickness,
    int lineType,
    int shift)
{
    return cvTry([&] {
        cv::ellipse(IoProxy(*img), cpp(center), cpp(axes), angle, startAngle, endAngle, cpp(color), thickness, lineType, shift);
    });
}
CVAPI(ExceptionStatus) imgproc_ellipse2(
    const interop::InputOutputArrayProxy* img,
    interop::RotatedRect box,
    interop::Scalar color,
    int thickness,
    int lineType)
{
    return cvTry([&] {
        cv::ellipse(IoProxy(*img), cpp(box), cpp(color), thickness, lineType);
    });
}
CVAPI(ExceptionStatus) imgproc_fillConvexPoly_Mat(
    cv::Mat *img,
    cv::Point *pts,
    int npts,
    interop::Scalar color,
    int lineType,
    int shift)
{
    return cvTry([&] {
    cv::fillConvexPoly(*img, pts, npts, cpp(color), lineType, shift);
    });
}
CVAPI(ExceptionStatus) imgproc_fillConvexPoly_InputOutputArray(
    const interop::InputOutputArrayProxy* img,
    const interop::InputArrayProxy* points,
    interop::Scalar color,
    int lineType,
    int shift)
{
    return cvTry([&] {
        cv::fillConvexPoly(IoProxy(*img), InProxy(*points), cpp(color), lineType, shift);
    });
}
CVAPI(ExceptionStatus) imgproc_fillPoly_Mat(
    cv::Mat *img,
    const cv::Point **pts,
    const int *npts,
    int ncontours,
    interop::Scalar color,
    int lineType,
    int shift,
    interop::Point offset)
{
    return cvTry([&] {
    cv::fillPoly(*img, pts, npts, ncontours, cpp(color), lineType, shift, cpp(offset));
    });
}
CVAPI(ExceptionStatus) imgproc_fillPoly_InputOutputArray(
    const interop::InputOutputArrayProxy* img,
    const interop::InputArrayProxy* pts,
    interop::Scalar color,
    int lineType,
    int shift,
    interop::Point offset)
{
    return cvTry([&] {
        cv::fillPoly(IoProxy(*img), InProxy(*pts), cpp(color), lineType, shift, cpp(offset));
    });
}
CVAPI(ExceptionStatus) imgproc_polylines_Mat(
    cv::Mat *img,
    const cv::Point **pts,
    const int *npts,
    int ncontours,
    int isClosed,
    interop::Scalar color,
    int thickness,
    int lineType,
    int shift)
{
    return cvTry([&] {
    cv::polylines(
        *img, pts, npts, ncontours, isClosed != 0, cpp(color), thickness, lineType, shift);
    });
}
CVAPI(ExceptionStatus) imgproc_polylines_InputOutputArray(
    const interop::InputOutputArrayProxy* img,
    const interop::InputArrayProxy* pts,
    int isClosed,
    interop::Scalar color,
    int thickness,
    int lineType,
    int shift)
{
    return cvTry([&] {
        cv::polylines(IoProxy(*img), InProxy(*pts), isClosed != 0, cpp(color), thickness, lineType, shift);
    });
}
CVAPI(ExceptionStatus) imgproc_clipLine1(
    interop::Size imgSize,
    interop::Point *pt1,
    interop::Point *pt2,
    int* returnValue)
{
    return cvTry([&] {
    auto pt1c = cpp(*pt1), pt2c = cpp(*pt2);
    const auto result = cv::clipLine(cpp(imgSize), pt1c, pt2c);
    *pt1 = c(pt1c);
    *pt2 = c(pt2c);
    *returnValue = result ? 1 : 0;
    });
}
CVAPI(ExceptionStatus) imgproc_clipLine2(
    interop::Rect imgRect,
    interop::Point *pt1,
    interop::Point *pt2,
    int* returnValue)
{
    return cvTry([&] {
    auto pt1c = cpp(*pt1), pt2c = cpp(*pt2);
    const auto result = cv::clipLine(cpp(imgRect), pt1c, pt2c);
    *pt1 = c(pt1c);
    *pt2 = c(pt2c);
    *returnValue = result ? 1 : 0;
    });
}